logging: route log macros through Dispatcher
Log macros now call util::log::g_dispatcher().Log() directly instead of
going through LogInstance(). BCLog::Logger registers a callback on its
Dispatcher to receive entries and handle formatting, rate limiting, and
output.

--- a/src/kernel/CMakeLists.txt
+++ b/src/kernel/CMakeLists.txt
@@ -67,6 +67,7 @@ add_library(bitcoinkernel
   ../util/fs.cpp
   ../util/fs_helpers.cpp
   ../util/hasher.cpp
+  ../util/log.cpp
   ../util/moneystr.cpp
   ../util/rbf.cpp
   ../util/serfloat.cpp
