fuzz: Add private_broadcast_persist target

--- a/src/test/fuzz/CMakeLists.txt
+++ b/src/test/fuzz/CMakeLists.txt
@@ -133,6 +133,7 @@ add_executable(fuzz
   utxo_snapshot.cpp
   utxo_total_supply.cpp
   validation_load_mempool.cpp
+  private_broadcast_persist.cpp
   vecdeque.cpp
   versionbits.cpp
 )
